Fix z-index of recipe-compilation entities

--- a/resources/sass/posts/_postCompilation.scss
+++ b/resources/sass/posts/_postCompilation.scss
@@ -26,7 +26,7 @@
   padding: 0;
 
   img {
-    z-index: 1001;
+    z-index: 101;
   }
 }
 
@@ -52,7 +52,7 @@
   flex-wrap: wrap;
   width: 100%;
   color: rgba(255, 255, 255, 0.9);
-  z-index: 1002;
+  z-index: 102;
 }
 
 .vignette-large {
@@ -79,7 +79,7 @@
   color: rgba(128, 128, 128, 0.9);
   text-transform: uppercase;
   text-align: left;
-  z-index: 1002;
+  z-index: 102;
 }
 
 .recipe-compilation-item-large-title {
